<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/summaryLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="4dp"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/valueTable"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="@string/summary_label" />

	<TableLayout
		android:id="@+id/valueTable"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/summaryLabel">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/buyinLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:text="@string/buyin_value_label"
				android:textAlignment="center"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/valueLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:text="@string/current_value_label"
				android:textAlignment="center"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/buyinText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:textAlignment="center"
				tools:text="0.00€" />

			<TextView
				android:id="@+id/valueText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:text="0.00€"
				android:textAlignment="center" />
		</TableRow>

	</TableLayout>

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/valueTable">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		</androidx.recyclerview.widget.RecyclerView>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
